# codigobootcamp-mvc-ecommerce

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  setup_db.py
app/: __init__.py  config.py
app/controllers/: auth_controller.py  cart_controller.py  order_controller.py  product_controller.py
app/models/: __init__.py  cart.py  order.py  product.py  user.py
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/cart/: index.html
app/templates/products/: detail.html  index.html
app/views/: auth.py  cart.py  product.py
